# symfields

./: .gitignore  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  test.yml
examples/: basic_usage.py
src/symfields/: __init__.py
src/tests/: __init__.py  test_constraints.py  test_lambda_support.py  test_symfields.py  test_update.py
