[project]
name = "symfields"
version = "0.1.0"
description = "A library for defining classes with symbolic field relationships that can be automatically inverted"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "SymFields Contributors" }
]
requires-python = ">=3.9"
dependencies = [
    "sympy>=1.14.0",
]
keywords = ["symbolic", "math", "fields", "dataclass", "equations", "solver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/kbairak/symfields"
Repository = "https://github.com/kbairak/symfields"
Issues = "https://github.com/kbairak/symfields/issues"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
